--- a/vue-app/src/style.css
+++ b/vue-app/src/style.css
@@ -268,6 +268,10 @@ span.info-label {
   margin-top: 15px;
 }
 
+.ar-content-uploader .ar-recorder{
+    margin-bottom: 15px;
+}
+
 @media (max-width: 1400px) {
   /* .card-desc { */
       /* display: none !important; /* Hide the text in mobile view */
